prevent tabs from falling out of the header on safari

--- a/assets/stylesheets/base.css
+++ b/assets/stylesheets/base.css
@@ -37,6 +37,7 @@ body {
     background: url(/images/background.png) top left no-repeat;
     border: 0 solid #DDD;
     border-width: 0 0 3px 0;
+    padding-bottom: 0.5em;
 }
 
 #logo h1 a {
@@ -66,6 +67,7 @@ body {
 
 #nav { 
     padding: 0.5em;
+    padding-bottom: 0;
     text-align: left;
 }
 
@@ -211,4 +213,8 @@ caption {
 		font-size: 1.4em;
 		padding: 5px;
 		font-weight: bold;
+}
+
+.clear {
+    clear: both;
 }
